# dota-bootbreaker-auto

./: .gitignore  AGENTS.md  README.md  config.example.json  pyproject.toml
bootbreaker/: __init__.py  __main__.py  bot.py  capture.py  config.py  detect.py  input.py  main.py  strategy.py
docs/: init.md
tests/: conftest.py  test_bot.py  test_capture.py  test_config.py  test_detect.py  test_import.py  test_input.py  test_main.py  test_strategy.py
