[project]
name = "bootbreaker-auto"
version = "0.1.0"
description = "Auto-player for the Dota 2 Bootbreaker arcade minigame"
requires-python = ">=3.10"
dependencies = [
    "mss",
    "opencv-python",
    "numpy",
    "pydirectinput",
    "keyboard",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bootbreaker"]
